--- a/BlobStorage.Demo.Api/BlobStorage.Demo.Api.csproj
+++ b/BlobStorage.Demo.Api/BlobStorage.Demo.Api.csproj
@@ -5,7 +5,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Azure.Storage.Blobs" Version="12.8.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\BlobStorage.Demo.Application\BlobStorage.Demo.Application.csproj" />
+    <ProjectReference Include="..\BlobStorage.Demo.Model\BlobStorage.Demo.Model.csproj" />
   </ItemGroup>
 
 </Project>
